tests/language_tests/pass/0094_assign_from_function_call_expression.ee
fn value() {
    return 2;
}

fn main() {
    let x = 1;
    x = value() + 5 * 3;
    print(x);
}
