tests/language_tests/fail/0056_duplicate_parameter_names.ee
fn bad(x, x) {
    return x;
}

fn main() {
    print(bad(1, 2));
}
